# shader-mcve

./: .gitignore  Cargo.toml  index.html  readme.md
.cargo/: config.toml
assets/: glowy.wgsl  grass.wgsl  pixel.wgsl  pulsating.wgsl
src/: cache.rs  extract.rs  generator.rs  grass.rs  grass.wgsl  grass_pipeline.rs  lib.rs  main.rs  pipeline.rs  plugin.rs  prepare.rs  queue.rs  render.rs
src/generator/: plane.rs
