[package]
name = "shader-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9.1"
features = [
    "bevy_winit",
    "render",
    "jpeg",
    "x11",
    "filesystem_watcher",
    "dynamic"
]

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls"
rev = "50ea82bf08289bfe9fcf8a4f024d67d575f15548"
