[package]
name = "shader-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
smooth-bevy-cameras = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9.1"
features = [
    "bevy_winit",
    "render",
    "jpeg",
    "x11",
    #"filesystem_watcher",
    #"dynamic"
]

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls"
rev = "6062b860aea87034081399369fd7ef5715f13256"
